tests/parsing/smtlib/mcil/errors/235_define-system_bad_subsys_decl_5.mcil
(define-system sys :subsys (n (s _)))